# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

##
# Minimal pip build requirements:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support

[project]
name = "avro"
description = "Avro is a serialization and RPC framework."
version = "1.13.0"
requires-python = ">=3.10"
authors = [{name = "Apache Avro", email = "dev@avro.apache.org"}]
keywords = ["avro", "serialization", "rpc"]
license-files = ["LICENSE.txt"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
Homepage = "https://avro.apache.org/"
Documentation = "https://avro.apache.org/docs/1.12.0/api/py/html/"
Repository = "https://github.com/apache/avro.git"
Issues = "https://github.com/apache/avro/issues"

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
avro = "avro.__main__:main"

[project.optional-dependencies]
snappy = ["python-snappy"]
zstandard = ["zstandard"]

[tool.ruff]
line-length = 150

[tool.setuptools.package-data]
"avro" = [
  "HandshakeRequest.avsc", "HandshakeResponse.avsc", "LICENSE.txt",
  "NOTICE", "README.md", "VERSION.txt" ]
"avro.tether" = ["InputProtocol.avpr", "OutputProtocol.avpr"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mypy<1.19.0",
    "python-snappy>=0.7.3",
    "ruff>=0.15.1",
    "setuptools>=82.0.0",
    "sphinx>=8.1.3",
    "zstandard>=0.25.0",
]
