##
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = avro-python3
version = file: avro/VERSION.txt
description = Avro is a serialization and RPC framework.
long_description = file: README.txt
keywords =
    avro
    serialization
    rpc
author = Apache Avro
author_email = dev@avro.apache.org
url = https://avro.apache.org/
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    avro = avro
include_package_data = true
packages = avro
install_requires =
zip_safe = true
scripts =
    scripts/avro
python_requires = >=3.5
test_suite = avro.tests.run_tests

[options.package_data]
avro =
    HandshakeRequest.avsc
    HandshakeResponse.avsc
    VERSION.txt
    LICENSE
    NOTICE

[options.extras_require]
snappy = snappy

[aliases]
dist = sdist --dist-dir ../../dist/py3
