# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "avro-rs"
version = "0.13.0"
authors = ["Flavien Raynaud <flavien.raynaud@gmail.com>", "Antonio Verardi <antonio.uccio.verardi@gmail.com>"]
description = "Library for working with Apache Avro in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flavray/avro-rs"
edition = "2018"

[features]
snappy = ["crc", "snap"]

[lib]
path = "src/lib.rs"
# disable benchmarks to allow passing criterion arguments to `cargo bench`
bench = false

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "serde_json"
harness = false

[[bench]]
name = "single"
harness = false

[dependencies]
byteorder = "1.0.0"
crc = { version = "1.3.0", optional = true }
digest = "0.9"
libflate = "1"
num-bigint = "0.2.6"
rand = "0.7.0"
regex = "^1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
snap = { version = "0.2.3", optional = true }
strum = "0.18.0"
strum_macros = "0.18.0"
thiserror = "1.0"
typed-builder = "0.5.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
zerocopy = "0.3.0"
lazy_static = "^1.1"

[dev-dependencies]
md-5 = "0.9"
sha2 = "0.9"
criterion = "0.3.1"
anyhow = "1.0.31"
hex-literal = "0.3.1"
