# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "apache-avro"
version = "0.14.0"
authors = ["Apache Avro team <dev@avro.apache.org>"]
description = "A library for working with Apache Avro in Rust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/apache/avro"
edition = "2018"
keywords = ["avro", "data", "serialization"]
categories = ["encoding"]
documentation = "https://docs.rs/apache-avro"

[features]
snappy = ["crc32fast", "snap"]
zstandard = ["zstd"]
bzip = ["bzip2"]
xz = ["xz2"]

[lib]
path = "src/lib.rs"
# disable benchmarks to allow passing criterion arguments to `cargo bench`
bench = false

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "serde_json"
harness = false

[[bench]]
name = "single"
harness = false

[dependencies]
byteorder = "1.4.3"
bzip2 = { version = "0.4.3", optional = true }
crc32fast = { version = "1.3.2", optional = true }
digest = "0.10.3"
libflate = "1.1.2"
xz2 = { version = "0.1.6", optional = true }
num-bigint = "0.4.3"
rand = "0.8.5"
regex = "1.5.4"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
snap = { version = "1.0.5", optional = true }
strum = "0.23.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"
typed-builder = "0.10.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
zerocopy = "0.6.1"
lazy_static = "1.4.0"
log = "0.4.14"
zstd = { version = "0.10.0+zstd.1.5.2" , optional = true }

[dev-dependencies]
md-5 = "0.10.0"
sha2 = "0.10.1"
criterion = "0.3.5"
anyhow = "1.0.53"
hex-literal = "0.3.4"
env_logger = "0.9.0"
