# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
    "avro_test_helper",
    "avro_derive",
    "avro",
    "wasm-demo"
]
exclude = [
    "fuzz"
]

resolver = "2"

[workspace.package]
version = "0.18.0"
authors = ["Apache Avro team <dev@avro.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/avro"
edition = "2021"
rust-version = "1.73.0"
keywords = ["avro", "data", "serialization"]
categories = ["encoding"]
documentation = "https://docs.rs/apache-avro"

# dependencies used by more than one members
[workspace.dependencies]
log = { default-features = false, version = "0.4.22" }
serde = { default-features = false, version = "1.0.209", features = ["derive"] }
serde_bytes = { default-features = false, version = "0.11.15", features = ["std"] }
serde_json = { default-features = false, version = "1.0.127", features = ["std"] }

[profile.release.package.hello-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
